Fix horizontal overflow, fix mouse capture

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
   min-height: 100vh;
+  overflow: hidden;
+}
+body {
+  background-color: #343a40 !important;
 }
